--- a/.github/workflows/deployment_surge.yml
+++ b/.github/workflows/deployment_surge.yml
@@ -28,5 +28,5 @@ jobs:
     - name: install Surge
       run: npm install -g surge
     - name: Run Surge
-      run: surge ./bootcamp-practicenewapp.surge.sh --token ${{secret.SURGE_TOKEN}}
+      run: surge ./bootcamp-practicenewapp.surge.sh --token ${{secrets.SURGE_TOKEN}}
       
