--- a/.github/workflows/deployment_surge.yml
+++ b/.github/workflows/deployment_surge.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: DeployWebsite
+name: DeployWebsite1
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
@@ -28,5 +28,5 @@ jobs:
     - name: install Surge
       run: npm install -g surge
     - name: run surge
-      run: surge ./ bootcamppracticenewapp.surge.sh --token ${{secrets.SURGE_TOKEN}}
-      
+      run: surge ./ bootcamppracticenewapp1.surge.sh --token ${{secrets.SURGE_TOKEN}}
+]
