--- a/.github/workflows/deployment_surge.yml
+++ b/.github/workflows/deployment_surge.yml
@@ -1,12 +1,13 @@
 # This is a basic workflow to help you get started with Actions
 
-name: DeployWebsite1
+name: Deploy_Surge
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 on:
   push:
     branches: [ master ]
+
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -21,12 +22,14 @@ jobs:
     - uses: actions/checkout@v2
 
     # Runs a single command using the runners shell
-    - name: Install NodeJs
-      uses : actions/setup-node@v2-beta
+    - name: Install NodeJS
+      uses: actions/setup-node@v2-beta
       with:
         node-version: 12
-    - name: install Surge
+    - name: Install Surge
       run: npm install -g surge
-    - name: run surge
-      run: surge ./ bootcamppracticenewapp1.surge.sh --token ${{secrets.SURGE_TOKEN}}
-]
+    - name: Run Surge
+      run: surge ./ bootcampnewappfile112.surge.sh --token ${{secrets.SURGE_TOKEN}}
+ 
+
+ 
